[project]
name = "serenity"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Joel Van Eenwyk", email = "joel.vaneenwyk@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jinja2>=3.1.4",
    "ruff>=0.7.0",
    "isort>=5.13.2",
    "pyright>=1.1.385",
    "pylint>=3.3.1",
    "mypy>=1.12.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/serenity"]
